2004-07-17  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Refactored %TYPE%::Snit_optionget to 
	* roadmap.txt	::snit::RT.OptionDbGet.

2004-07-17  Will Duquette  <will@wjduquette.com>

	* snit.tcl	  Added "delegate typemethod ..." in all its glory,
	* snit.test	  including "delegate typemethod *".  Made it 
	* dictionary.txt  Possible to delegate an instance method to a
	* roadmap.txt	  typecomponent.  Added tests to ensure that
			  variable/typevariable and component/typecomponent 
			  names do not collide.  Updated a number of 
			  compilation error messages for consistency.
			  Moved the remaining typemethod definitions from the 
			  template code and replaced them delegations to
			  the Snit runtime library.  Added/modified
			  relevant tests, and updated the roadmap and 
			  dictionary files.  

2004-07-15  Will Duquette  <will@wjduquette.com>

	* snit.tcl 	Replaced the old typemethod definition and
			cacheLookup code with new pattern-based code, just
			like the method definition and lookup.  The
			cache lookup routine doesn't yet understand 
			typemethod "*".  The next step is to implement
			typecomponents and "delegate typemethod".

	* dictionary.txt  Documented the changes related to the above
			change. 

2004-07-14  Will Duquette  <will@wjduquette.com>

	* snit.tcl      Replaced %TYPE%::Snit_comptrace with
                        snit::RT.ComponentTrace.

			Replaced %TYPE%::Snit_cacheLookup with
			snit::RT.MethodCacheLookup

			Replaced %TYPE%::Snit_typeCacheLookup with
			snit::RT.TypemethodCacheLookup

	* snit.test	Added a test to verify that a widget's hull
			component cannot be altered once it is set.
	
	* roadmap.txt   Documents the internal structure of snit.tcl.
	
2004-07-11  Will Duquette  <will@wjduquette.com>

	* snit.tcl	Renamed a number of internal commands, for
	                clarity.  

			Refactored the standard method bodies
			out of the type definition and into the Snit
	                runtime using delegation.
